[package]
name = "reverb"
version = "0.1.0"
authors = ["yunta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]
[features]
[dependencies]
vector3d = "0.1.9"
netcdf = {version="0.5.1",features=["static"]}
crossbeam = "0.8"